--- a/templates/admin.html
+++ b/templates/admin.html
@@ -116,7 +116,7 @@
                                                     <img
                                                         src="{{ stat.path }}"
                                                         alt="{{ stat.filename }}"
-                                                        class="w-16 h-16 object-cover rounded"
+                                                        class="w-full max-w-[200px] h-auto object-cover rounded p-3"
                                                     >
                                                     <div>
                                                         <p class="font-medium">{{ stat.filename }}</p>
