--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Memes Ranker{% endblock %}</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='/css/globals.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='/css/components.css') }}">
     <meta name="description" content="Rate and rank memes with friends">
